# Telegram-anal

./: README.md  pyproject.toml
Real_life_jsons/: sample_chat.json
examples/: create_a_fun_wordcloud.py  measure_family_reactions.py  who_writes_first.py
telenal/: __init__.py  analysis.py  client.py  reactions.py  teleplotter.py
tests/: test_analisis.py
