[tool.poetry]
name = "telegram-anal"
version = "0.1.0"
description = "A fun tool to play with Telegram chats"
authors = ["Vladyslav Bilyk <vladozeransky2k@gmail.com>"]

license = "GPL-3.0-or-later"
readme = "README.md"

keywords = ["telegram", "analysis", "nlp"]

[tool.poetry.dependencies]
python = "^3.10"

Pyrogram = "^2.0.59"
python-dotenv = "^0.21.0"
TgCrypto = "^1.2.4"
matplotlib = "^3.6.1"
numpy = "^1.23.4"
scipy = "^1.9.3"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
